# APG

./: .gitignore  Dockerfile  README.md  pyproject.toml
apg/: __init__.py  cli.py  config.py  discover.py  models.py  server.py
apg/audit/: logger.py
apg/extauthz/: service.py
apg/identity/: resolver.py
apg/normalizer/: engine.py  risk.py
apg/observe/: collector.py  generalize.py  generator.py  profile.py
apg/policy/: engine.py  loader.py
config/: apg.yaml  tool_mappings.yaml
config/policies/: example.cedar
tests/integration/: test_extauthz.py  test_observe_pipeline.py
tests/unit/: test_discover.py  test_generalize.py  test_normalizer.py
